Refacoring, get rid of Date  and Calendar